[package]
name = "RUST"
version = "0.1.0"
edition = "2021"

[dependencies]

reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde_json = "1.0"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.38.0", features = ["rt-multi-thread", "macros"] }
log = "0.4.21"
simple_logger = "5.0.0"
lazy_static = "1.4.0"