[package]
name = "Rust-Cloudflare-Workers-AI-Telegram-Bot"
version = "0.0.10"
edition = "2021"

[dependencies]

reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde_json = "1.0"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.38.0", features = ["rt-multi-thread", "macros"] }
log = "0.4.21"
simple_logger = "5.0.0"
lazy_static = "1.4.0"

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
